--- a/OurNewProject/Views/Users/Register.cshtml
+++ b/OurNewProject/Views/Users/Register.cshtml
@@ -23,13 +23,17 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-           
+
             <div class="form-group">
                 <input type="submit" value="Sign up" class="btn btn-primary" />
             </div>
         </form>
 
-        <div class="text-danger">@ViewBag.Error </div>
+        @if (ViewBag.Error != null)
+        {
+            <div class="text-danger">@ViewBag.Error </div>
+
+        }
 
     </div>
 </div>
