--- a/OurNewProject/Views/Home/Privacy.cshtml
+++ b/OurNewProject/Views/Home/Privacy.cshtml
@@ -1,6 +1,49 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
+﻿
+<html dir="rtl">
+
+@{
+    ViewData["Title"] = "רשימת סניפים";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Rishon">ראשון לציון</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Jerusalem">ירושלים</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TA">תל אביב</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Mevasseret">מבשרת ציון</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RG">רמת גן</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Shoam">שוהם</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BeerS">באר שבע</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Eilat">אילת</a>
+</li>
+
+@*/*<p>ירושלים</p>
+<p>תל אביב</p>
+<p>חיפה</p>
+<p>מבשרת ציון</p>
+<p>רמת גן</p>
+<p>שוהם</p>
+<p>גבעתיים</p>
+<p>באר שבע</p>
+<p>אשדוד</p>
+<p>אשקלון</p>
+<p>סביון</p>
+<p>קיסריה</p>
+<p>אילת</p>*\*@
+
+</html>
