--- a/OurNewProject/Views/Home/Privacy.cshtml
+++ b/OurNewProject/Views/Home/Privacy.cshtml
@@ -1,49 +1,49 @@
 ﻿
+<div  class="text-center" style="color:darkred">
 <html dir="rtl">
 
 @{
     ViewData["Title"] = "רשימת סניפים";
 }
 <h1>@ViewData["Title"]</h1>
+</div>
 
-
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Rishon">ראשון לציון</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Jerusalem">ירושלים</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TA">תל אביב</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Mevasseret">מבשרת ציון</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="RG">רמת גן</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Shoam">שוהם</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="BeerS">באר שבע</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Eilat">אילת</a>
-</li>
-
-@*/*<p>ירושלים</p>
-<p>תל אביב</p>
-<p>חיפה</p>
-<p>מבשרת ציון</p>
-<p>רמת גן</p>
-<p>שוהם</p>
-<p>גבעתיים</p>
-<p>באר שבע</p>
-<p>אשדוד</p>
-<p>אשקלון</p>
-<p>סביון</p>
-<p>קיסריה</p>
-<p>אילת</p>*\*@
-
+<div class="text-center">
+    @*
+        <nav class="mega_menu" role="menubar" role="navigation" tabindex="-1" aria-hidden="true">
+            <a> dsadsa</a>
+        </nav>*@
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Rishon">ראשון לציון</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Jerusalem">ירושלים</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="TA">תל אביב</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Mevasseret">מבשרת ציון</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="RG">רמת גן</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Shoam">שוהם</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="BeerS">באר שבע</a>
+    </li>
+    <p></p>
+    <li class="nav-item">
+        <a class="btn btn-outline-dark" asp-area="" asp-controller="Home" asp-action="Eilat">אילת</a>
+    </li>
+</div>
 </html>
