--- a/OurNewProject/Views/Home/Index.cshtml
+++ b/OurNewProject/Views/Home/Index.cshtml
@@ -3,6 +3,19 @@
 }
 
 <div class="text-center">
+
+
+    @*     תמונה של הלוגו   *@
+
+
+    @* תמונה של גלידות*@
+
     <h1 class="display-4">Welcome</h1>
+    <p>
+
+        <img src="https://www.nizat.com/userfiles/images/shutterstock_1500504500.jpg" width="1000" height="1000" class="img-fluid">
+
+    </p>
+
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
