--- a/OurNewProject/Views/Home/Hyadata.cshtml
+++ b/OurNewProject/Views/Home/Hyadata.cshtml
@@ -2,9 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-right">
+<div class="text-center">
 
     <h1 class="display-4"> הידעת?  </h1>
 
+    @*
+        <div id="background-wrap">
+        <div class="bubble x1"></div>
+        <div class="bubble x2"></div>
+        <div class="bubble x3"></div>
+        <div class="bubble x4"></div>
+        <div class="bubble x5"></div>
+        <div class="bubble x6"></div>
+        <div class="bubble x7"></div>
+        <div class="bubble x8"></div>
+        <div class="bubble x9"></div>
+        <div class="bubble x10"></div>
+
+    </div>*@
 
 </div>
