--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -6,19 +6,21 @@
     <title>@ViewData["Title"] - OurNewProject</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-  
+ 
+
+
 </head>
 
 <body>
 @*
     <style>
         body {
-            background-color: #e8ac18 /*color of the background*/
+            background-color: #ffc5d9 /*color of the background*/
         }
     </style>*@
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-danger border-bottom box-shadow mb-3"  >
             <div class="container" >
 
                 <a OurNewProject</a>
