--- a/OurNewProject/wwwroot/css/hayadata.css
+++ b/OurNewProject/wwwroot/css/hayadata.css
@@ -1,352 +1,4 @@
-﻿/*@import url('https://fonts.googleapis.com/css?family=Fredoka+One');
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Fredoka One', cursive;
-}
-
-h1 {
-    font-size: 60px;
-    color: #DB0A5B;
-    text-align: center;
-}
-
-.artboard {
-    position: relative;
-    width: 800px;
-    height: 600px;
-    margin: 50px auto;
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0px 10px 30px #dadfe1;
-    z-index: -999;
-}
-
-.ice-cream {
-    position: absolute;
-    top: -4%;
-    left: 24%;
-    width: 400px;
-    height: 525px;
-    animation: xy 4s linear infinite;
-}
-
-.stick {
-    position: absolute;
-    top: 75%;
-    left: 40%;
-    width: 80px;
-    height: 120px;
-    background-color: #f39c12;
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-}
-
-    .stick::before {
-        content: "";
-        position: absolute;
-        width: 110px;
-        height: 120px;
-        background-color: #e67e22;
-        border-bottom-right-radius: 50px;
-        border-bottom-left-radius: 50px;
-        z-index: -1;
-    }
-
-.shadow {
-    position: absolute;
-    top: 398px;
-    left: 40%;
-    width: 80px;
-    height: 20px;
-    background-color: #000;
-    opacity: 0.3;
-    z-index: 1;
-}
-
-.line-1 {
-    position: absolute;
-    top: 75%;
-    left: 43%;
-    width: 10px;
-    height: 60px;
-    background-color: #e67e22;
-}
-
-    .line-1::before {
-        content: "";
-        position: absolute;
-        top: 121%;
-        width: 10px;
-        height: 20px;
-        background-color: #e67e22;
-    }
-
-.line-2 {
-    position: absolute;
-    top: 75%;
-    left: 49%;
-    width: 10px;
-    height: 48px;
-    background-color: #e67e22;
-}
-
-    .line-2::before {
-        content: "";
-        position: absolute;
-        top: 123%;
-        width: 10px;
-        height: 44px;
-        background-color: #e67e22;
-    }
-
-.line-3 {
-    position: absolute;
-    top: 82%;
-    left: 55%;
-    width: 10px;
-    height: 44px;
-    background-color: #e67e22;
-}
-
-    .line-3::before {
-        content: "";
-        position: absolute;
-        top: -73%;
-        width: 10px;
-        height: 20px;
-        background-color: #e67e22;
-    }
-
-.red {
-    position: absolute;
-    top: 53%;
-    left: 8%;
-    width: 250px;
-    height: 120px;
-    background-color: #d91e18;
-    border-bottom-right-radius: 50px;
-    border-bottom-left-radius: 50px;
-}
-
-    .red::before {
-        content: "";
-        position: absolute;
-        left: 30%;
-        width: 250px;
-        height: 120px;
-        background-color: #cf000f;
-        border-bottom-right-radius: 50px;
-        border-bottom-left-radius: 50px;
-        z-index: -1;
-    }
-
-.yellow {
-    position: absolute;
-    top: 30%;
-    left: 8%;
-    width: 250px;
-    height: 121px;
-    background-color: #f1c40f;
-}
-
-    .yellow::before {
-        content: "";
-        position: absolute;
-        left: 30%;
-        width: 250px;
-        height: 121px;
-        background-color: #f39c12;
-        z-index: -3;
-    }
-
-.green {
-    position: absolute;
-    top: 7%;
-    left: 8%;
-    width: 250px;
-    height: 121px;
-    background-color: #2ecc71;
-    border-top-right-radius: 50px;
-    border-top-left-radius: 50px;
-}
-
-    .green::before {
-        content: "";
-        position: absolute;
-        left: 30%;
-        width: 250px;
-        height: 121px;
-        background-color: #27ae60;
-        z-index: -1;
-        border-top-right-radius: 50px;
-        border-top-left-radius: 50px;
-    }
-
-.shadow-1 {
-    position: absolute;
-    top: 26%;
-    left: 65%;
-    width: 10px;
-    height: 130px;
-    background-color: #fff;
-    border-radius: 20px;
-    transform: rotateY(20deg);
-    z-index: 1;
-}
-
-    .shadow-1::before {
-        content: "";
-        position: absolute;
-        top: -41%;
-        left: -4%;
-        width: 10px;
-        height: 30px;
-        background-color: #fff;
-        border-radius: 20px;
-        transform: rotateY(20deg);
-        z-index: 1;
-    }
-
-    .shadow-1::after {
-        content: "";
-        position: absolute;
-        top: 117%;
-        width: 10px;
-        height: 15px;
-        background-color: #fff;
-        border-radius: 20px;
-        transform: rotateY(20deg);
-    }
-
-
-.eye {
-    position: absolute;
-    top: 33%;
-    left: 28%;
-    width: 20px;
-    height: 20px;
-    background-color: #34495e;
-    box-shadow: 0px 3px #f39c12;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-    .eye::before {
-        content: "";
-        position: absolute;
-        left: 76px;
-        width: 20px;
-        height: 20px;
-        background-color: #34495e;
-        box-shadow: 0px 3px #f39c12;
-        border-radius: 50%;
-        z-index: 1;
-    }
-
-.smile {
-    position: absolute;
-    top: 41%;
-    left: 31%;
-    width: 75px;
-    height: 43px;
-    background-color: #34495e;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 90px;
-    border-bottom-left-radius: 90px;
-    overflow: hidden;
-    z-index: 1;
-}
-
-.smileshadow {
-    position: absolute;
-    left: 16%;
-    width: 75px;
-    height: 43px;
-    background-color: #34498C;
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 90px;
-    border-bottom-left-radius: 90px;
-}
-
-.tongue {
-    position: absolute;
-    top: 70%;
-    left: 31%;
-    width: 30px;
-    height: 30px;
-    background-color: #f22613;
-    border-radius: 50%;
-    z-index: 1;
-}
-
-.ground-1 {
-    position: absolute;
-    top: 96%;
-    left: 46%;
-    width: 80px;
-    height: 10px;
-    background-color: #2c3e50;
-    border-radius: 20px;
-    animation: ground 4s ease-out infinite;
-}
-
-.ground-2 {
-    position: absolute;
-    top: 96%;
-    left: 58%;
-    width: 25px;
-    height: 10px;
-    background-color: #2c3e50;
-    border-radius: 20px;
-    animation: ground 4s ease-out infinite;
-}
-
-.ground-3 {
-    position: absolute;
-    top: 96%;
-    left: 41%;
-    width: 30px;
-    height: 10px;
-    background-color: #2c3e50;
-    border-radius: 20px;
-    animation: ground 4s ease-out infinite;
-}
-
-@keyframes ground {
-    0% {
-        transform: scaleX(0.8);
-    }
-
-    50% {
-        transform: scaleX(1);
-    }
-
-    100% {
-        transform: scaleX(0.8);
-    }
-}
-
-@keyframes xy {
-    0% {
-        top: -4%;
-    }
-
-    50% {
-        top: 0%;
-    }
-
-    100% {
-        top: -4%;
-    }
-}
-*/
-/*  ------------------------------------------------ */
+﻿
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,400;1,600&display=swap");
 
 * {
@@ -354,9 +6,9 @@ h1 {
 }
 
 body {
-    background-color: #f7f8fc;
+    background-color:#f7f8fc;
     font-family: "Open Sans", sans-serif;
-    display: flex;
+  /*  display: flex;*/
     align-items: center;
     justify-content: center;
     height: 100vh;
