--- a/OurNewProject/Views/Users/LogIn.cshtml
+++ b/OurNewProject/Views/Users/LogIn.cshtml
@@ -1,47 +1,44 @@
 ﻿@model OurNewProject.Models.User
 
 @{
-    ViewData["Title"] = "LogIn";
-    Layout = "_LogInLayout";
+    ViewData["Title"] = "Login";
 }
 
-<h1>Log In</h1>
+<h1>Login</h1>
 
 
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="LogIn">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
-                <span asp-validation-for="UserName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
+<div id="login-box">
+    <div class="left">
+        <h1>Login</h1>
+        <form asp-action="Login">
+
+            <input asp-for="UserName" class="form-control" placeholder="Username" />
+            <input asp-for="Password" class="form-control" placeholder="Password" />
+            <input type="submit" value="Login" class="btn btn-primary" />
+
+
+
+            <div>
+                <br />
+                Not part of the family ?<br />
+                <a asp-action="Register">Click here</a> to join.
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Log in" class="btn btn-primary" />
-            </div>
         </form>
 
         @if (ViewBag.Error != null)
         {
             <div class="text-danger">@ViewBag.Error </div>
-
         }
+    </div>
+
+    <div class="right">
+        <br /><br /><br /><br /><br /><br />
+        <button class="social-signin facebook">Log in with facebook</button>
 
     </div>
+    <div class="or">OR</div>
 </div>
-
-<div>
-    Not registered? <a asp-action="Register">To register, click here </a>
-</div>
-
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
