--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -12,16 +12,16 @@
 </head>
 
 <body>
-@*
-    <style>
-        body {
-            background-color: #ffc5d9 /*color of the background*/
-        }
-    </style>*@
+    @*
+        <style>
+            body {
+                background-color: #ffc5d9 /*color of the background*/
+            }
+        </style>*@
 
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-danger border-bottom box-shadow mb-3"  >
-            <div class="container" >
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-danger border-bottom box-shadow mb-3">
+            <div class="container">
 
                 <a OurNewProject</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -91,11 +91,15 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2021 - OurNewProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    <footer class="text-dark">
+        <div>
+            conect
         </div>
+        @*<div class="container">
+                &copy; 2021 - OurNewProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>*@
     </footer>
+   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
