--- a/OurNewProject/Views/Shared/_Layout.cshtml
+++ b/OurNewProject/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Delete">delete user</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Users" asp-action="Index">Edit users</a>
                         </li>
 
 
