--- a/OurNewProject/Views/Products/Create.cshtml
+++ b/OurNewProject/Views/Products/Create.cshtml
@@ -29,12 +29,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="productImage.Imge" class="control-label"></label>
-                <input asp-for="productImage.Imge" class="form-control" />
-                <span asp-validation-for="productImage.Imge" class="text-danger"></span>
+                <label asp-for="InStock" class="control-label"></label>
+                <input asp-for="InStock" class="form-control" />
+                <span asp-validation-for="InStock" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
