--- a/OurNewProject/Views/Products/Delete.cshtml
+++ b/OurNewProject/Views/Products/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category.Id)
         </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InStock)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InStock)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
