--- a/OurNewProject/Views/Products/Details.cshtml
+++ b/OurNewProject/Views/Products/Details.cshtml
@@ -34,6 +34,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Category.Id)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.InStock)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.InStock)
+        </dd>
     </dl>
 </div>
 <div>
