--- a/OurNewProject/Views/Products/Index.cshtml
+++ b/OurNewProject/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Category)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.productImage.Imge)
+                @Html.DisplayNameFor(model => model.InStock)
             </th>
             <th></th>
         </tr>
@@ -44,6 +44,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Category.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.InStock)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
